# amaranth-analogue-core-template

./: .env.toolchain  .gitignore  analogue.toml  pyproject.toml
src/amaranth_analogue/: README.md  packaging.py
src/amaranth_analogue_example/: README.md
src/fpga/amaranth_core/: .env.toolchain  pyproject.toml
src/fpga/apf/: build_id.mif
src/fpga/core/: amaranth_core.v
src/fpga/output_files/: ap_core.rbf  ap_core.sof
